[ios] Fix faulty done button logic

The Done button logic was faulty in two ways:
1) Enabling/disabling logic was flawed.
2) Tapping Done would show incognito when it should show the regular
tab. (And vice-versa).

Done button should only disable after the original page (incognito or
regular tabs) where the user entered the tab grid is depleted of tabs.

This CL fixes this by bookkeeping the |originalPage| that the user
entered the tab grid. This CL also modifies the
TabPresentationDelegate's |-showActiveTab| so that the intended page
is specified in the method. This allows the TabGridViewController
to pass the |originalPage| for Done button taps, and the |currentPage|
for new tab button taps or tab cell taps.

Bug: 824921, 824912
Cq-Include-Trybots: master.tryserver.chromium.mac:ios-simulator-cronet;master.tryserver.chromium.mac:ios-simulator-full-configs
Change-Id: Ie81721a181f50b63a92722bf507986aa9596a4f5
Reviewed-on: https://chromium-review.googlesource.com/977561
Reviewed-by: Mark Cogan <marq@chromium.org>
Reviewed-by: edchin <edchin@chromium.org>
Commit-Queue: edchin <edchin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#545449}