ios/chrome/browser/ui/tab_grid/tab_grid_coordinator.mm
@@ -12,6 +12,7 @@
 #import "ios/chrome/browser/ui/main/bvc_container_view_controller.h"
 #import "ios/chrome/browser/ui/tab_grid/tab_grid_adaptor.h"
 #import "ios/chrome/browser/ui/tab_grid/tab_grid_mediator.h"
+#import "ios/chrome/browser/ui/tab_grid/tab_grid_paging.h"
 #import "ios/chrome/browser/ui/tab_grid/tab_grid_transition_handler.h"
 #import "ios/chrome/browser/ui/tab_grid/tab_grid_view_controller.h"
 
@@ -190,14 +191,21 @@
 
 #pragma mark - TabPresentationDelegate
 
-- (void)showActiveTab {
-  // Figure out which tab model is the active one. If the view controller is
-  // showing the incognito panel, and there's more than one incognito tab, then
-  // the incognito model is active. Otherwise the regular model is active.
-  TabModel* activeTabModel = self.regularTabModel;
-  if (self.mainViewController.currentPage == TabGridPageIncognitoTabs &&
-      self.incognitoTabModel.count > 0) {
-    activeTabModel = self.incognitoTabModel;
+- (void)showActiveTabInPage:(TabGridPage)page {
+  DCHECK(self.regularTabModel && self.incognitoTabModel);
+  TabModel* activeTabModel;
+  switch (page) {
+    case TabGridPageIncognitoTabs:
+      DCHECK_GT(self.incognitoTabModel.count, 0U);
+      activeTabModel = self.incognitoTabModel;
+      break;
+    case TabGridPageRegularTabs:
+      DCHECK_GT(self.regularTabModel.count, 0U);
+      activeTabModel = self.regularTabModel;
+      break;
+    case TabGridPageRemoteTabs:
+      NOTREACHED() << "It is invalid to have an active tab in remote tabs.";
+      break;
   }
   // Trigger the transition through the TabSwitcher delegate. This will in turn
   // call back into this coordinator via the ViewControllerSwapping protocol.
