ios/chrome/browser/ui/tab_grid/tab_grid_view_controller.h
@@ -18,8 +18,8 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 // Delegate protocol for an object that can handle presenting ("opening") tabs
 // from the tab grid.
 @protocol TabPresentationDelegate<NSObject>
-// Show the active tab, presented on top of the tab grid.
-- (void)showActiveTab;
+// Show the active tab in |page|, presented on top of the tab grid.
+- (void)showActiveTabInPage:(TabGridPage)page;
 @end
 
 // View controller representing a tab switcher. The tab switcher has an
